tests/ui/structs/parse-error-with-type-param.stderr
error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/parse-error-with-type-param.rs:8:5
   |
LL | struct B<T> {
   |        - while parsing this struct
LL |     a: A<(T, u32)> // <- note, comma is missing here
LL |     /// asdf
   |     ^^^^^^^^
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`
help: missing comma here
   |
LL |     a: A<(T, u32)>, // <- note, comma is missing here
   |                   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0585`.
